--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,9 @@
   <header>
     <div class="conteiner">
       <div class="header-top">
-        <div class="logo"><h1>Техномарт</h1></div>
+        <div class="logo">
+          <h1>Техномарт</h1>
+        </div>
         <div class="search"><input type="search" placeholder="Поиск"></div>
         <a class="bookmarks" href="#">Закладки</a>
         <a class="basket" href="#">Корзина</a>
@@ -29,8 +31,11 @@
           <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
         </div>
         <div class="user-block">
-          <a href="">Вход</a>
-          <a href="">Регистация</a>
+          <a href="">Равшан Джамшутович</a>
+        </div>
+        <div class="information">
+          <a  class="my-orders"href="">Мои заказы</a>
+          <a  class ="cabinet "href="">Личный кабинет</a>
         </div>
         <nav class="header-nav">
           <ul>
@@ -64,36 +69,78 @@
       </div>
       <section class="filters">
         <h2>Фильтр</h2>
-       <!-- Здесь будет форма -->
+        <!-- Здесь будет форма -->
+        <form class="filter" metod="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend>цена</legend>
+            </fieldset>
+          <fieldset>
+            <legend>производители</legend>
+          <ul>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
+              <label for="filter-bosch">BOSCH</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="интерскол" id="filter-interskol">
+              <label for="filter-interskol">ИНТЕРСКОЛ</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" checked>
+              <label for="filter-makita">MAKITA</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
+              <label for="filter-dewalt">DEWALT</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hitachi" id="filter-hitachi">
+              <label for="filter-hitachi">HITACHI</label>
+            </li>
+          </ul>
+          </fieldset>
+          <fieldset>
+            <legend>питание</legend>
+          <ul>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="supply" value="baterry" checked id="filter-baterry">
+              <label for="filter-baterry">АККУМУЛЯТОРНЫЕ</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="supply" value="network" id="filter-supply">
+              <label for="filter-supply">СЕТЕВЫЕ</label>
+            </li>
+          </ul>
+          </fieldset>
+          <button type="submit" class="filter-button">ПОКАЗАТЬ</button>
+        </form>
       </section>
       <section class="catalog">
-       <div class=header>
-        <h2>Cортировка</h2>
-        <ul> 
-          <li><a href="#">По цене</a>
-          <li><a href="#">По типу</a>
-          <li><a href="#">По функционалу</a>
-        </ul>
-        <ul>
-          <li><a href="#">От большего к меньшуму</a>
-          <li><a href="#">От меньшего к болшему</a>
-        </ul>
+        <div class=header>
+          <h2>Cортировка</h2>
+          <ul>
+            <li><a href="#">По цене</a>
+              <li><a href="#">По типу</a>
+                <li><a href="#">По функционалу</a>
+          </ul>
+          <ul>
+            <li><a href="#">От большего к меньшуму</a>
+              <li><a href="#">От меньшего к болшему</a>
+          </ul>
         </div>
-       <div class="catolog-prefarators">
-        <ul>
-         <li class="popular-product-item">
+        <div class="catolog-prefarators">
+          <ul>
+            <li class="popular-product-item">
               <div class="actions">
                 <a href="#">Купить</a>
                 <a href="">В закладки</a>
               </div>
               <h3> Перфоратор Bosch BFG 3000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
-            </a>
+                <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
               </p>
-              <span class="oldvalue">22500 P.</span>
-              <span class="newvalue"><a class="button" href="">15500 Р.</a></span>
+              <span class="oldprice">22500 P.</span>
+              <span class="newprice">15500 Р.</span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
@@ -102,12 +149,10 @@
               </div>
               <h3>Перфоратор Bosch BFG 6000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
-            </a>
+                <img src="/img/bfg_6000.jpg" alt=">Перфоратор Bosch BFG 6000" width="144" height="128">
               </p>
-              <span class="oldvalue">30500 P.</span>
-              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
+              <span class="oldprice">30500 P.</span>
+              <span class="newprice">25500 Р.</span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
@@ -116,54 +161,9 @@
               </div>
               <h3>Перфоратор Bosch BFG 2000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
-           </a>
+                <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
               </p>
-              <span class="newvalue">
-              <a class="button" href="">12500 Р.</a></span>
-            </li>
-          <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3> Перфоратор Bosch BFG 3000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
-            </a>
-              </p>
-              <span class="oldvalue">22500 P.</span>
-              <span class="newvalue"><a class="button" href="">15500 Р.</a></span>
-            </li>
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3>Перфоратор Bosch BFG 6000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
-            </a>
-              </p>
-              <span class="oldvalue">30500 P.</span>
-              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
-            </li>
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3>Перфоратор Bosch BFG 2000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
-           </a>
-              </p>
-              <span class="newvalue">
-              <a class="button" href="">12500 Р.</a></span>
+              <span class="newprice">12500 Р.</span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
@@ -172,12 +172,10 @@
               </div>
               <h3> Перфоратор Bosch BFG 3000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
-            </a>
+                <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
               </p>
-              <span class="oldvalue">22500 P.</span>
-              <span class="newvalue"><a class="button" href="">15500 Р.</a></span>
+              <span class="oldprice">22500 P.</span>
+              <span class="newprice">15500 Р.</span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
@@ -186,12 +184,10 @@
               </div>
               <h3>Перфоратор Bosch BFG 6000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
-            </a>
+                <img src="/img/bfg_6000.jpg" alt=">Перфоратор Bosch BFG 6000" width="144" height="128">
               </p>
-              <span class="oldvalue">30500 P.</span>
-              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
+              <span class="oldprice">30500 P.</span>
+              <span class="newprice">25500 Р.</span>
             </li>
             <li class="popular-product-item">
               <div class="actions">
@@ -200,25 +196,57 @@
               </div>
               <h3>Перфоратор Bosch BFG 2000</h3>
               <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
-           </a>
+                <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
               </p>
-              <span class="newvalue">
-              <a class="button" href="">12500 Р.</a></span>
+              <span class="newprice">12500 Р.</span>
             </li>
-         </ul>
-       </div>
-       <ul class="pagination-list">
-         <li class="pagination-item pagination-item-current"><a>1</a></li>
-         <li class="pagination-item"><a href=#>2</a></li>
-         <li class="pagination-item"><a href=#>3</a></li>
-         <li class="pagination-item"><a href=#>4</a></li>
+            <li class="popular-product-item">
+              <div class="actions">
+                <a href="#">Купить</a>
+                <a href="">В закладки</a>
+              </div>
+              <h3> Перфоратор Bosch BFG 3000</h3>
+              <p class="popular-product-item-image">
+                <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
+              </p>
+              <span class="oldprice">22500 P.</span>
+              <span class="newprice">15500 Р.</span>
+            </li>
+            <li class="popular-product-item">
+              <div class="actions">
+                <a href="#">Купить</a>
+                <a href="">В закладки</a>
+              </div>
+              <h3>Перфоратор Bosch BFG 6000</h3>
+              <p class="popular-product-item-image">
+                <img src="/img/bfg_6000.jpg" alt=">Перфоратор Bosch BFG 6000" width="144" height="128">
+              </p>
+              <span class="oldprice">30500 P.</span>
+              <span class="newprice">25500 Р.</span>
+            </li>
+            <li class="popular-product-item">
+              <div class="actions">
+                <a href="#">Купить</a>
+                <a href="">В закладки</a>
+              </div>
+              <h3>Перфоратор Bosch BFG 2000</h3>
+              <p class="popular-product-item-image">
+                <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
+              </p>
+              <span class="newprice">12500 Р.</span>
+            </li>
+          </ul>
+        </div>
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current"><a>1</a></li>
+          <li class="pagination-item"><a href=#>2</a></li>
+          <li class="pagination-item"><a href=#>3</a></li>
+          <li class="pagination-item paginator-btn-next"><a href=#>СЛЕДУЮЩАЯ</a></li>
         </ul>
       </section>
       <article>
         <h3>Пара слов о перфораторах</h3>
-        <P>Перфоратов - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханический и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерты и отбойного молотка. В ассортементном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель. </P>
+        <P>Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханический и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерты и отбойного молотка. В ассортементном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель. </P>
       </article>
     </div>
   </main>
@@ -228,46 +256,47 @@
 
   
   -->
-   <footer class="footer">
-   <div class="conteiner">
-    <div class="top-footer">
-      <h1>Техномарт</h1>
-      <ul class="top-footer-navigation">
-        <li><a href="">Компания</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="">Каталог</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </div>
-    <div class="footer-center">
-      <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
-      <ul class="footer-center-nav">
-        <li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
-      </ul>
-    </div>
-    <div class="bottom-footer">
-      <p class="about-contacts">
-        2010-2017 Компания "Техномарт" <br> Все права защищены
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+  <footer class="footer">
+    <div class="conteiner">
+      <div class="top-footer">
+        <h1>Техномарт</h1>
+        <ul class="top-footer-navigation">
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </div>
-      <p class="footer-mail">
-        <b>Обратная связь:</b>
-        <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p class="footer-copyright">
-        <b>Разработано:</b>
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </div>
+      <div class="footer-center">
+        <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+        <ul class="footer-center-nav">
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <div class="bottom-footer">
+        <p class="about-contacts">
+          2010-2017 Компания "Техномарт" <br> Все права защищены
+        </p>
+        <div class="footer-social">
+          <ul>
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>
+        </div>
+        <p class="footer-mail">
+          <b>Обратная связь:</b>
+          <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p class="footer-copyright">
+          <b>Разработано:</b>
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </div>
     </div>
   </footer>
+  
