--- a/index.html
+++ b/index.html
@@ -14,42 +14,42 @@
 		-->
   <header>
     <div class="header-top">
-       
-        <a class="logo btn" href="index.html">Техномарт</a>
-        <input type="search" placeholder="Поиск">
-        <a class="bookmarks btn" href="#">Закладки:0</a>
-        <a class="basket btn" href="#">Корзина:0</a>
-        <a class="checkout btn" href="">Оформить заказ</a>
-   
+      <div class="container">
+      <a class="logo btn" href="index.html">Техномарт</a>
+      <input type="search" placeholder="Поиск">
+      <a class="bookmarks btn" href="#">Закладки:0</a>
+      <a class="basket btn" href="#">Корзина:10</a>
+      <a class="checkout btn" href="">Оформить заказ</a>
+      </div>
     </div>
-      <div class="header-bottom">
-        <div class="container">
-         <div class="tittle">
+    <div class="header-bottom">
+      <div class="container">
+        <div class="tittle">
           <p>Интернет магазин строительных материалов и инструментов для ремонта
           </p>
-          </div>
-          <div class="contacts">
-            <a href="tel:+78125550555">+7 (812)555-05-55 </a>
-            <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
-          </div>
-          <div class="user-block">
-            <a href="">Вход</a>
-            <a href="">Регистация</a>
-          </div>
-          <nav class="header-nav">
-            <ul>
-              <li><a href="">Главная</a></li>
-              <li><a href="">Компания</a></li>
-              <li><a href="">Каталог</a></li>
-              <li><a href="">Новости</a></li>
-              <li><a href="">Спецпредложения</a></li>
-              <li><a href="">Доставка</a></li>
-              <li><a href="">Контакты</a></li>
-            </ul>
-          </nav>
         </div>
+        <div class="contacts">
+          <a href="tel:+78125550555">+7 (812)555-05-55 </a>
+          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+        </div>
+        <div class="user-block">
+          <a href="">Вход</a>
+          <a href="">Регистация</a>
+        </div>
+        <nav class="header-nav">
+          <ul>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Компания</a></li>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Спецпредложения</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
-   
+    </div>
+
   </header>
   <!--
 			main
@@ -110,10 +110,10 @@
             </div>
             <h3>Перфоратор Bosch BFG 9000</h3>
             <div class="popular-image">
-              <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 9000">
+              <img src="/img/bfg_9000.jpg" alt="Перфоратор Bosch BFG 9000" width="184" height="164">
             </div>
             <span class="oldprice">32300 P.</span>
-            <span class="newprice"><a class="button" href="">25500 Р.</a></span>
+            <span class="newprice">25500 Р.</span>
           </li>
           <li class="popular-product-item">
             <div class="actions">
@@ -122,12 +122,10 @@
             </div>
             <h3> Перфоратор Bosch BFG 3000</h3>
             <p class="popular-product-item-image">
-              <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
-            </a>
+              <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
             </p>
             <span class="oldprice">22500 P.</span>
-            <span class="newprice"><a class="button" href="">15500 Р.</a></span>
+            <span class="newprice">15500 Р.</span>
           </li>
           <li class="popular-product-item">
             <div class="actions">
@@ -136,12 +134,10 @@
             </div>
             <h3>Перфоратор Bosch BFG 6000</h3>
             <p class="popular-product-item-image">
-              <a href="">
-              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
-            </a>
+              <img src="/img/bfg_6000.jpg" alt=">Перфоратор Bosch BFG 6000" width="144" height="128">
             </p>
             <span class="oldprice">30500 P.</span>
-            <span class="newprice"><a class="button" href="">25500 Р.</a></span>
+            <span class="newprice">25500 Р.</span>
           </li>
           <li class="popular-product-item">
             <div class="actions">
@@ -150,12 +146,9 @@
             </div>
             <h3>Перфоратор Bosch BFG 2000</h3>
             <p class="popular-product-item-image">
-              <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
-           </a>
+              <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
             </p>
-            <span class="newprice">
-              <a class="button" href="">12500 Р.</a></span>
+            <span class="newprice">12500 Р.</span>
           </li>
         </ul>
       </section>
@@ -169,28 +162,28 @@
         </div>
         <ul class="popular-manufacturer-list">
           <li class="popula-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="bosch"></a>
+            <a href=""><img src="/img/bosch.jpg" alt="bosch" width="127" height="37"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="makita"></a>
+            <a href=""><img src="/img/makita.jpg" alt="makita" width="123" height="40"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="dewalt"></a>
+            <a href=""><img src="/img/dewalt.jpg" alt="dewalt" width="144" height="46"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="интерскол"></a>
+            <a href=""><img src="/img/interskol.jpg" alt="интерскол" width="200" height="88"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="hitachi"></a>
+            <a href=""><img src="/img/hitachi.jpg" alt="hitachi" width="169" height="31"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="lg"></a>
+            <a href=""><img src="/img/lg.jpg" alt="lg" width="121" height="73"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""><img src="http://placehold.it/150x100" alt="aeg"></a>
+            <a href=""><img src="/img/aeg.jpg" alt="aeg" width="151" height="96"></a>
           </li>
           <li class="popular-manufacturer-item">
-            <a href=""> <img src="http://placehold.it/150x100" alt="metabo"></a>
+            <a href=""> <img src="/img/metabo.jpg" alt="metabo" width="204" height="69"></a>
           </li>
         </ul>
       </section>
@@ -298,5 +291,24 @@
       </div>
     </div>
   </footer>
+  <div>
+    <button class="close" type="button">крестик</button>
+    <form class="letter">
+      <label>
+        <span>Ваше имя:</span>
+        <input class="" type="text" placeholder="Представьтесь, пожалуйста">
+      </label>
+      <label>
+        <span>Ваш e-mail:</span>
+        <input class="" type="email" placeholder="Для отправки ответа">
+      </label>
+      <label>
+        <span>Текст письма:</span>
+        <textarea class="" rows="5" placeholder="В свободной форме"></textarea>
+      </label>
+      <input type="submit">
+    </form>
+  </div>
 </body>
+
 </html>
